--- a/projets.html
+++ b/projets.html
@@ -127,19 +127,19 @@
       <div class="container footer-inner">
         <p>Designed by <strong>Fowe</strong> with HTML, CSS, JS</p>
         <nav class="footer-socials" aria-label="Réseaux sociaux">
-          <a href="mailto:mail@mail.com" aria-label="Contact mail">
+          <a href="mailto:foweeric01@gmail.com" aria-label="Contact mail">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
               <path d="M4 4h16v16H4V4zm2 4l6 5 6-5" stroke="#ff8906" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><animate attributeName="stroke" values="#ff8906;#fff;#ff8906" dur="2s" repeatCount="indefinite" /></path>
             </svg>
           </a>
-          <a href="https://www.linkedin.com" target="_blank" rel="noopener" aria-label="Linkedin">
+          <a href="https://www.linkedin.com/in/fowe-eric" target="_blank" rel="noopener" aria-label="Linkedin">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
               <rect x="3" y="3" width="18" height="18" rx="4" stroke="#ff8906" stroke-width="2"><animate attributeName="stroke" values="#ff8906;#fff;#ff8906" dur="2s" repeatCount="indefinite" /></rect>
               <circle cx="8.5" cy="16.5" r="1.5" fill="#ff8906"><animate attributeName="fill" values="#ff8906;#fff;#ff8906" dur="2s" repeatCount="indefinite" /></circle>
               <path d="M8.5 14V10.5" stroke="#ff8906" stroke-width="2" /><path d="M12 14v-2.5c0-.7.9-1.5 2-1.5s2 .8 2 1.5V14" stroke="#ff8906" stroke-width="2"/>
             </svg>
           </a>
-          <a href="https://github.com" target="_blank" rel="noopener" aria-label="GitHub">
+          <a href="https://github.com/Vankuyt" target="_blank" rel="noopener" aria-label="GitHub">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
               <path d="M12 3C7.03 3 3 7.03 3 12c0 3.87 2.69 7.14 6.41 8.26.47.09.65-.2.65-.44 0-.22-.01-.81-.01-1.59-2.61.57-3.16-1.26-3.16-1.26-.42-1.04-1.03-1.32-1.03-1.32-.84-.58.07-.57.07-.57.93.06 1.42.96 1.42.96.83 1.43 2.18 1.01 2.71.77.08-.6.32-1.01.59-1.24-2.08-.24-4.28-1.04-4.28-4.64 0-1.02.36-1.85.95-2.5-.1-.24-.41-1.22.09-2.54 0 0 .78-.25 2.57.95.74-.21 1.53-.32 2.31-.32.79 0 1.57.11 2.31.32 1.79-1.2 2.57-.95 2.57-.95.5 1.33.19 2.31.09 2.54.59.65.95 1.48.95 2.5 0 3.61-2.2 4.4-4.29 4.63.33.28.62.82.62 1.66 0 1.2-.01 2.17-.01 2.47 0 .24.17.53.66.44C18.31 19.14 21 15.87 21 12c0-4.97-4.03-9-9-9z" stroke="#ff8906" stroke-width="1.7"><animate attributeName="stroke" values="#ff8906;#fff;#ff8906" dur="2s" repeatCount="indefinite" /></path>
             </svg>
